rename geoname API to geocode
